# study-buddy

./: .env.example  .gitignore  AUDIO_PLAYBACK_INFO.md  FORCE_TOOL_PATCH.py  GOOGLE_LENS_SETUP.md  INSTALLATION.md  LICENSE  OTTIMIZZAZIONI_2024_11_11.md  README.md  RELAZIONE_USER_STUDY_V2.md  SESSION_REPORT.md  TEST_EMAIL_QUERY.md  TOKEN_LIMIT_FIX.md  all_courses.txt  analysis_dashboard.py  analysis_report.txt  builder_debug.txt  builder_debug_2.txt  builder_debug_3.txt  builder_debug_4.txt  builder_debug_5.txt  builder_debug_after_install.txt  builder_debug_final.txt  builder_debug_final_2.txt  builder_debug_unbuffered.txt  builder_output.txt  builder_output_v2.txt  builder_output_v3.txt  check_content.py  check_duplicates.py  check_imports.py  check_index.py  check_processed_files.py  check_siia_path.py  check_unstructured.py  config.yaml  count_extracted_files.py  debug_complexity.txt  debug_output_ragas.txt  debug_retrieval.py  (+73 more)
data/: README.md
scripts/: test_google_lens_raw.py
src/app/: indexer.py  (+1 more)
study_buddy/: README.md  agent.py  config.py  document_loader.py  embeddings.py  llm.py  main.py  pipeline.py  requirements.txt  update_faiss_index.py  vector_store.py
tests/: requirements.txt  test_clip_interrogator.py  test_document_loader.py  test_embedding.py  test_google_lens_tool.py  test_image_extraction.py  test_image_generation_tool.py  test_indexer.py  test_qwen_text_analysis.py  test_qwen_text_analyzer.py  test_retrieve_tool.py  test_sentiment_tool.py  test_stt.py  test_summarizer_tool.py  test_text_extractor.py  test_vector_store.py  test_wolframealpha.py
(+118 files in other folders)
