[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "study_buddy"
version = "0.0.1"
description = "An interactive and intelligent study buddy that leverages LLM and RAG to support students."
authors = [
  { name = "Pinto-Tanzi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["product_return_prediction"]
force_sort_within_sections = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.flake8]
max-line-length = 88
exclude = [
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [ 
    "E203"
]